# aoc-2021-python

./: .gitignore  LICENSE  README.md  pyproject.toml
day01/: day01.py
day02/: day02.py
day03/: day03.py
day04/: day04.py
day05/: day05.py
src/submarine/: submarine.py  utils.py
