[tool.poetry]
name = "aoc-2021-python"
version = "0.1.0"
description = "This is my submission for advent of code 2021"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9 <3.11"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
bandit = "^1.7.1"
sqlfluff = "^0.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
